[gd_scene load_steps=9 format=3 uid="uid://4x4e04g73s7i"]

[ext_resource type="ButtonGroup" uid="uid://dg2uddj38j633" path="res://actioN_bnutn.tres" id="1_lx5au"]
[ext_resource type="Script" uid="uid://bv05frudy0ewg" path="res://scenes/shop.gd" id="1_xfvoa"]
[ext_resource type="Script" uid="uid://dpq32ki7kt2kh" path="res://addons/gloot/ui/ctrl_inventory_grid.gd" id="2_8r1wq"]
[ext_resource type="Script" uid="uid://8x7swbhjs64j" path="res://addons/gloot/core/inventory.gd" id="4_ajxib"]
[ext_resource type="JSON" path="res://scripts/json/items.json" id="5_y6sft"]
[ext_resource type="Script" uid="uid://di0ls2xd5mt7j" path="res://addons/gloot/core/constraints/grid_constraint.gd" id="6_m4ofw"]

[sub_resource type="Gradient" id="Gradient_heatd"]

[sub_resource type="GradientTexture2D" id="GradientTexture2D_1v8qu"]
gradient = SubResource("Gradient_heatd")
fill_from = Vector2(0.149573, 0.226496)
fill_to = Vector2(1, 1)

[node name="Shop" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xfvoa")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture2D_1v8qu")

[node name="PanelContainer2" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -149.5
offset_right = 274.0
offset_bottom = 149.5
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer2"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer2/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer2/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Your Inventory"
uppercase = true

[node name="HSeparator" type="HSeparator" parent="PanelContainer2/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="GridContainer" type="GridContainer" parent="PanelContainer2/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0

[node name="CtrlInventoryGrid" type="Control" parent="PanelContainer2/MarginContainer/VBoxContainer/GridContainer" node_paths=PackedStringArray("inventory")]
unique_name_in_owner = true
custom_minimum_size = Vector2(256, 256)
layout_mode = 2
size_flags_horizontal = 0
script = ExtResource("2_8r1wq")
inventory = NodePath("../../../../../Inventory")
metadata/_custom_type_script = "uid://dpq32ki7kt2kh"

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 85)
layout_mode = 2

[node name="ItemsContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="GridContainer" type="GridContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
columns = 3

[node name="BuyBtn" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
toggle_mode = true
button_group = ExtResource("1_lx5au")
text = "BUY"

[node name="SellBtn" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
toggle_mode = true
button_group = ExtResource("1_lx5au")
text = "SELL"

[node name="HaggleBtn" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
toggle_mode = true
button_group = ExtResource("1_lx5au")
text = "HAGGLE"

[node name="Inventory" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("4_ajxib")
protoset = ExtResource("5_y6sft")
_serialized_format = {}
metadata/_custom_type_script = "uid://8x7swbhjs64j"

[node name="GridConstraint" type="Node" parent="Inventory"]
script = ExtResource("6_m4ofw")
size = Vector2i(8, 8)

[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/GridContainer/BuyBtn" to="." method="_on_buy_btn_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/GridContainer/SellBtn" to="." method="_on_sell_btn_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/GridContainer/HaggleBtn" to="." method="_on_haggle_btn_pressed"]
